--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Build windows-i386
       run: |
         git submodule init && git submodule update
-        ./waf.bat configure -T release --build-games=hl2 --prefix=bin --32bits
+        ./waf.bat configure -T release --build-games=cstrike --prefix=bin --32bits
         ./waf.bat install
 
     - name: 'Upload Artifact'
