--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,54 +6,20 @@ jobs:
   tests-linux-i386:
     runs-on: ubuntu-20.04
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run tests linux-i386
-      run: |
-        scripts/tests-ubuntu-i386.sh
 
-  tests-linux-amd64:
-    runs-on: ubuntu-20.04
+  build-windows-amd64:
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run tests linux-amd64
-      run: |
-        scripts/tests-ubuntu-amd64.sh
-
-  tests-macos-amd64:
-    runs-on: macos-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run tests macos-amd64
-      run: |
-        scripts/tests-macos-amd64.sh
-
-  tests-windows-i386:
-    runs-on: windows-2019
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run tests windows-i386
+    - name: Build windows-amd64
       run: |
         git submodule init && git submodule update
-        ./waf.bat configure -T release --tests --prefix=out/ --32bits
+        ./waf.bat configure -T release --build-games=episodic --prefix=bin
         ./waf.bat install
-        cd out
-        $env:Path = "bin";
-        ./unittest.exe
 
-  tests-windows-amd64:
-    runs-on: windows-2019
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run tests windows-amd64
-      run: |
-        git submodule init && git submodule update
-        ./waf.bat configure -T release --tests --prefix=out/
-        ./waf.bat install
-        cd out
-        $env:Path = "bin";
-        ./unittest.exe
+    - name: 'Upload Artifact'
+      uses: actions/upload-artifact@v3
+      with:
+        name: windows-amd64
+        path: bin
